[package]
name = "spider"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
uuid = { version = "1.18.0", features = ["v4"] }
chrono = "0.4.41"
